--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,14 +42,14 @@ jobs:
       matrix:
         include:
           # minimum required versions
-          - otp: "27.2.4"
-            elixir: "1.18.4-otp-27"
-          - otp: "28.3.1"
-            elixir: "1.18.4-otp-28"
-          - otp: "27.2.4"
-            elixir: "1.19.5-otp-27"
-          - otp: "28.3.1"
-            elixir: "1.19.5-otp-28"
+          # - otp: "27.2.4"
+          #   elixir: "1.18.4-otp-27"
+          # - otp: "28.3.1"
+          #   elixir: "1.18.4-otp-28"
+          # - otp: "27.2.4"
+          #   elixir: "1.19.5-otp-27"
+          # - otp: "28.3.1"
+          #   elixir: "1.19.5-otp-28"
           - otp: "28.3.1"
             elixir: "1.20.0-rc.1-otp-28"
             lint: true
